# NotGPT

./: .gitignore  .pre-commit-config.yaml  DIRECTIVES.md  HOWTO.md  May13UPDATES.md  May14UPDATES.md  PR_SUMMARY.md  ci.sh  maintain_feeds.py  pyproject.toml
.github/workflows/: axiomrun.yml  ci.yml  pyob.yml
docs/: index.html  ledger.db  status.json
src/axiom_client/: __init__.py  main.py
src/axiom_server/: __init__.py  api_query.py  article_fetcher.py  common.py  crucible.py  discovery_rss.py  hasher.py  index.html  ledger.py  lite_ledger.py  log_config.py  merkle.py  node.py  run_node.py  synthesizer.py  verification_engine.py  verification_manager.py  zeitgeist_engine.py
src/axiom_server/p2p/: __init__.py  constants.py  node.py
tests/: test_ledger.py  test_p2p_node.py  test_verification_engine.py
